[gd_scene load_steps=6 format=2]

[ext_resource path="res://5f440e4ab2b24_Zero.Two.Darling.in.the.FranXX.full.2364813.png" type="Texture" id=1]
[ext_resource path="res://Game/Ally.gd" type="Script" id=2]
[ext_resource path="res://qn8kKPkSkEQZWgQvA51oyOlYDY7q2bpXbJ3vHAoDKF0LAEPf76eC6TI3XxkAOgtpDiPgueiaHTQfywcbq8OV_4R4.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 102.955, 84.3182 )

[node name="Ally" type="KinematicBody2D"]
position = Vector2( 478, 360 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, -27.9545 )
shape = SubResource( 2 )

[node name="HP_Ally" type="TextureProgress" parent="."]
margin_left = -22.7273
margin_top = -37.2727
margin_right = 207.273
margin_bottom = -15.2727
rect_scale = Vector2( 0.2, 0.3 )
value = 100.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="Timer_Of_HP" type="Timer" parent="HP_Ally"]
autostart = true

[node name="Mana_Ally" type="TextureProgress" parent="."]
margin_left = -23.1818
margin_top = -30.9091
margin_right = 206.818
margin_bottom = -8.90906
rect_scale = Vector2( 0.2, 0.3 )
max_value = 200.0
value = 200.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 0.133333, 1, 1 )
nine_patch_stretch = true

[node name="Timer_Of_Mana" type="Timer" parent="Mana_Ally"]
autostart = true

[node name="value_of_HP" type="Label" parent="."]
margin_left = -5.0
margin_top = -37.2727
margin_right = 23.0
margin_bottom = 10.7273
rect_scale = Vector2( 0.5, 0.5 )
text = "100


"

[node name="value_of_Mana" type="Label" parent="."]
margin_left = -5.45454
margin_top = -30.4545
margin_right = 34.5455
margin_bottom = 17.5455
rect_scale = Vector2( 0.5, 0.5 )
text = "200


"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="HP_Ally/Timer_Of_HP" to="." method="_on_Timer_Of_HP_timeout"]
[connection signal="timeout" from="Mana_Ally/Timer_Of_Mana" to="." method="_on_Timer_Of_Mana_timeout"]
